// Copyright (c) Ultraviolet
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package manager;

option go_package = "./manager";

service ManagerService {
  rpc Run(RunRequest) returns (RunResponse) {}
}

message RunRequest {
  Computation computation = 1;
}

message Computation {
  string id = 1;
  string name = 2;
  string description = 3;
  repeated Dataset datasets = 4;
  repeated Algorithm algorithms = 5;
  repeated string result_consumers = 6;
  AgentConfig agent_config = 7;
}

message Dataset {
  string provider = 1;
  string id = 2;
}

message Algorithm {
  string provider = 1;
  string id = 2;
}

message RunResponse {
  string agent_address = 1;
}

message AgentConfig {
  string port = 1;
  string host = 2;
  string cert_file = 3;
  string key_file = 4;
  string log_level = 5;
  string instance_id = 6;
}
